--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <form action="<%= posts_url %>" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <%= form_authentication %>
   <input type="text" name="post[title]" value="<%= @post.title %>">
   <textarea name="post[body]"><%= @post.body %></textarea>
   <input type="Submit">
